@@ -433,7 +433,10 @@ defaultOClass (symbol *sym)
       else
         {
           if (!sym->ival && !SPEC_ABSA (sym->etype) && !(IS_EXTERN (sym->etype) || IS_FUNC (sym->type)))
-            sym->ival = newiList(INIT_DEEP, revinit(newiList(INIT_NODE, newAst_VALUE(constIntVal("0"))))); // Default initalization to 0.
+            {
+              sym->ival = newiList(INIT_DEEP, revinit(newiList(INIT_NODE, newAst_VALUE(constIntVal("0"))))); // Default initalization to 0.
+              sym->ival->lineno = sym->lineDef;
+            }
           SPEC_OCLS (sym->etype) = statsg;
         }
       break;
