@@ -10,6 +10,10 @@
 	* src/SDCCcse.c,
 	  support/valdiag/tests/bug-3457.c:
 	  Fix bug #3457.
+	* src/SDCCmem.c,
+	  src/SDCCval.c,
+	  support/valdiag/tests/bug-3031.c:
+	  Fix bug #3383.
 
 2022-08-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
